# rtaoai2

./: AGENTS.md  README.md  opanai_events.csv  pyproject.toml
dumps/: 00:03.44_conversation.item.create.json  00:03.44_response.create.json  00:03.44_session.update.json  00:03.47_session.created.json  00:03.61_conversation.item.created.json  00:03.61_response.created.json  00:03.61_session.updated.json  00:04.16_conversation.item.created.json  00:04.16_rate_limits.updated.json  00:04.16_response.audio.delta (2).json  00:04.16_response.audio_transcript.delta (4).json  00:04.16_response.content_part.added.json  00:04.16_response.output_item.added.json  00:04.18_response.audio_transcript.delta.json  00:04.28_response.audio.delta (2).json  00:04.28_response.audio.delta.json  00:04.28_response.audio_transcript.delta (4).json  00:04.33_response.audio_transcript.delta (2).json  00:04.41_response.audio.delta (6).json  00:04.56_response.audio.done.json  00:04.56_response.audio_transcript.done.json  00:04.56_response.content_part.done.json  00:04.56_response.done.json  00:04.56_response.output_item.done.json  00:09.26_input_audio_buffer.append.json  00:09.26_input_audio_buffer.commit.json  00:09.26_response.create.json  00:09.51_input_audio_buffer.committed.json  00:09.52_conversation.item.created.json  00:09.69_conversation.item.input_audio_transcription.completed.json  00:09.69_response.created.json  00:09.74_conversation.item.created.json  00:09.74_rate_limits.updated.json  00:09.74_response.audio_transcript.delta (8).json  00:09.74_response.content_part.added.json  (+82 more)
(+19 files in other folders)
