[project]
name = "rtaoai2"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Damien Bihel", email = "biheldamien@gmail.com" }
]
dependencies = [
    "fastapi[all]>=0.115.2",
    "pydantic>=2.9.2",
    "websockets>=13.1",
    "mypy>=1.12.0",
    "pydub>=0.25.1",
]
readme = "README.md"
requires-python = ">=3.13"

[project.scripts]
"rtaoai2" = "rtaoai2:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups.dev]
dependencies = [
    "pytest",
    "ruff",
    "pytest-asyncio",
    "pyright",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/rtaoai2"]
